[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcommon-bigint = "0.2.10"
hex = "0.4.3"
hex-literal = "0.4.1"
sha3 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }